some basic setup on index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Max's Personal Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+	<main>
+		<head>
+			<h1> Max Rasmusen </h1>
+		</head>
+		<div id="links">
+			<ul>
+				<li>CV</li>
+				<li>Personal Statement</li>
+					<!-- will contain a section for each project and a navbar at the top -->
+				<li>Projects</li>
+				<li>Email</li> 
+				<li>Github</li>
+			</ul>
+		</div>
+	</main>
 </body>
 </html>
