everything except emails has links and pages if necessary

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		</head>
 		<div id="links">
 			<ul>
-				<li>CV</li>
-				<li>Personal Statement</li>
+				<a href="pages/CV.html"> <li>CV</li> </a>
+				<a href="pages/personal-statement.html"><li>Personal Statement</li></a>
 					<!-- will contain a section for each project and a navbar at the top -->
-				<li>Projects</li>
+				<a href="pages/projects.html"><li>Projects</li></a>
 				<li>Email</li> 
-				<li>Github</li>
+				<a href="https://github.com/maxrasmusen"> <li>Github</li> </a>
 			</ul>
 		</div>
 	</main>
