pages now have header and content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<main>
+	<main id="index-main">
 		<head>
 			<h1> Max Rasmusen </h1>
 		</head>
@@ -14,8 +14,7 @@
 				<a href="pages/CV.html"> <li>CV</li> </a>
 				<a href="pages/personal-statement.html"><li>Personal Statement</li></a>
 					<!-- will contain a section for each project and a navbar at the top -->
-				<a href="pages/projects.html"><li>Projects</li></a>
-				<li>Email</li> 
+				<a href="pages/projects.html"><li>Projects</li></a>		
 				<a href="https://github.com/maxrasmusen"> <li>Github</li> </a>
 			</ul>
 		</div>
