--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -5,7 +5,31 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<h1>Personal Statement</h1>
-	
+	<header>
+		<h1>Personal Statement</h1>
+		<nav>
+			<ul>
+				<a href="../index.html"><li>Home</li></a>
+				<a href="CV.html"> <li> CV </li></a>
+				<a href="personal-statement.html"><li>Personal Statement</li></a>
+				<a href="projects.html"><li>Projects</li></a>
+				<a href="https://github.com/maxrasmusen/personal-page/commits/master"> <li> Github </li></a>
+			</ul>
+		</nav>
+	</header>
+
+	<main id="page">
+		
+		<h2> My Personal Statement</h2>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		</p>
+
+	</main>
 </body>
 </html>
