--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 		<head>
 			<h1> Max Rasmusen </h1>
 		</head>
-		<div id="links">
-			<ul>
-				<a href="pages/CV.html"> <li>CV</li> </a>
-				<a href="pages/personal-statement.html"><li>Personal Statement</li></a>
-					<!-- will contain a section for each project and a navbar at the top -->
-				<a href="pages/projects.html"><li>Projects</li></a>		
-				<a href="https://github.com/maxrasmusen"> <li>Github</li> </a>
-			</ul>
+
+		<ul id="links">
+			<a href="pages/CV.html"> <li>CV</li> </a>
+			<a href="pages/personal-statement.html"><li>Personal Statement</li></a>
+				<!-- will contain a section for each project and a navbar at the top -->
+			<a href="pages/projects.html"><li>Projects</li></a>		
+			<a href="https://github.com/maxrasmusen"> <li>Github</li> </a>
+		</ul>
+		
+		<div id="contact">
+			<p> Email: mrasmusen@spartaglobal.co </p>
 		</div>
 	</main>
 </body>
