--- a/pages/CV.html
+++ b/pages/CV.html
@@ -13,14 +13,14 @@
 				<a href="CV.html"> <li> CV </li></a>
 				<a href="personal-statement.html"><li>Personal Statement</li></a>
 				<a href="projects.html"><li>Projects</li></a>
-				<a href="https://github.com/maxrasmusen/personal-page/commits/master"> <li> Github </li></a>
+				<a href="https://github.com/maxrasmusen"> <li> Github </li></a>
 			</ul>
 		</nav>
 	</header>
-	
+
 	<main id="page">
 		
-		<h2> My CV Stuff</h2>
+		<h2> Skills </h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -30,6 +30,22 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
 
+		<h2> Experience </h2>
+			<ul>
+				<li> 
+					<p> Some information </p>
+				 </li>
+				<li> Item 2 </li>
+				<li> Item 3 </li>
+				<li> Item 4 </li>
+			</ul>
+		<h2> Education </h2>
+
+		<h2> Other </h2>
+
+		<div id="contact">
+			<p> Email: mrasmusen@spartaglobal.co </p>
+		</div>
 	</main>
 	
 </body>
