--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -13,7 +13,7 @@
 				<a href="CV.html"> <li> CV </li></a>
 				<a href="personal-statement.html"><li>Personal Statement</li></a>
 				<a href="projects.html"><li>Projects</li></a>
-				<a href="https://github.com/maxrasmusen/personal-page/commits/master"> <li> Github </li></a>
+				<a href="https://github.com/maxrasmusen"> <li> Github </li></a>
 			</ul>
 		</nav>
 	</header>
@@ -29,6 +29,10 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
+		
+		<div id="contact">
+			<p> Email: mrasmusen@spartaglobal.co </p>
+		</div>
 
 	</main>
 </body>
