added metadata so media queries work on mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Max's Personal Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<main id="index-main">
@@ -17,7 +18,7 @@
 			<a href="pages/projects.html"><li>Projects</li></a>		
 			<a href="https://github.com/maxrasmusen"> <li>Github</li> </a>
 		</ul>
-		
+
 		<div id="contact">
 			<p> Email: mrasmusen@spartaglobal.co </p>
 		</div>
