--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Personal Statement</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
@@ -29,7 +30,7 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		</p>
-		
+
 		<div id="contact">
 			<p> Email: mrasmusen@spartaglobal.co </p>
 		</div>
