--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<header>
@@ -33,7 +34,7 @@
 		<div id="contact">
 			<p> Email: mrasmusen@spartaglobal.co </p>
 		</div>
-		
+
 	</main>
 	
 </body>
