--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -23,12 +23,7 @@
 		
 		<h2> My Personal Statement</h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			I am an aspiring DevOps/SDET Engineer with a passion for technology and a deep motivation to learn more. I am always looking for new ways to apply technology to business, and am constantly on the lookout for new solutions that can be beneficial. 
 		</p>
 
 		<div id="contact">
