cleaned up main menu style

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -34,8 +34,11 @@
 		<h2> Experience </h2>
 			<ul>
 				<li> 
-					<p> Some information </p>
-				 </li>
+					<ul>
+						<li> Embedded item 1 </li>
+						<li> Embedded item 2 </li>
+					</ul> 
+				</li>
 				<li> Item 2 </li>
 				<li> Item 3 </li>
 				<li> Item 4 </li>
