--- a/pages/CV.html
+++ b/pages/CV.html
@@ -22,15 +22,21 @@
 	<main id="page">
 		
 		<h2> Skills </h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-
+			<h3> Languages </h3>
+				<ul>
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>SQL</li>
+					<li>Javascript</li>
+					<li>Ruby</li>
+				</ul>
+				<ul>
+					<li>Python</li>
+					<li>C++</li>
+					<li>Java</li>
+					<li>C</li>
+					<li>etc.</li>
+				</ul>
 		<h2> Experience </h2>
 			<ul>
 				<li> 
