--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -25,7 +25,7 @@
 		</p>
 
 		<div id="contact">
-			<p> Email: mrasmusen@spartaglobal.co </p>
+			<p> <a href="mailto:mrasmusen1@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
 		</div>
 
 	</main>
