fixed email address

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -32,7 +32,7 @@
 		</p>
 
 		<div id="contact">
-			<p> <a href="mailto:mrasmusen1@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
+			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
 		</div>
 
 	</main>
