--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</ul>
 
 		<div id="contact">
-			<p> <a href="mailto:mrasmusen1@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
+			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
 		</div>
 	</main>
 </body>
