--- a/pages/CV.html
+++ b/pages/CV.html
@@ -54,7 +54,7 @@
 		<h2> Other </h2>
 
 		<div id="contact">
-			<p> <a href="mailto:mrasmusen1@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
+			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
 		</div>
 	</main>
 	
