added project menu and styled projects to suit

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,16 +20,45 @@
 	</header>
 
 	<main id="page">
+		<a href="#goto"> Go To Thing </a>
 		
 		<h2> My Projects</h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
+
+			<ul id="project-list">
+				<a href="#project-1"><li>Project 1 </li></a>
+				<a href="#project-2"><li>Project 2 </li></a>
+				<a href="#project-1"><li>Project 1 </li></a>
+				<a href="#project-2"><li>Project 2 </li></a>
+				<a href="#project-1"><li>Project 1 </li></a>
+				<a href="#project-2"><li>Project 2 </li></a>
+			</ul>
+
+			<h3 id="project-1"> Project 1 </h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<img src="../images/google.png"/>
+			<img src="../images/screenshot-cv.png"/>
+
+			<a class="to-top" href="#page">Go to top of page. &#x2191</a>
+
+			<h3 id="project-2"> Project 2 </h3>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+
+			<a class="to-top" href="#page"> Go to top of page. &#x2191 </a>
 
 		<div id="contact">
 			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
