removed some junk

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body id="body">
 	<header>
 		<h1>Projects</h1>
 		<nav>
@@ -20,15 +20,10 @@
 	</header>
 
 	<main id="page">
-		<a href="#goto"> Go To Thing </a>
 		
 		<h2> My Projects</h2>
 
 			<ul id="project-list">
-				<a href="#project-1"><li>Project 1 </li></a>
-				<a href="#project-2"><li>Project 2 </li></a>
-				<a href="#project-1"><li>Project 1 </li></a>
-				<a href="#project-2"><li>Project 2 </li></a>
 				<a href="#project-1"><li>Project 1 </li></a>
 				<a href="#project-2"><li>Project 2 </li></a>
 			</ul>
@@ -46,7 +41,7 @@
 			<img src="../images/google.png"/>
 			<img src="../images/screenshot-cv.png"/>
 
-			<a class="to-top" href="#page">Go to top of page. &#x2191</a>
+			<a class="to-top" href="#body">Go to top of page. &#x2191</a>
 
 			<h3 id="project-2"> Project 2 </h3>
 			<p>
@@ -58,7 +53,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 
-			<a class="to-top" href="#page"> Go to top of page. &#x2191 </a>
+			<a class="to-top" href="#body"> Go to top of page. &#x2191 </a>
 
 		<div id="contact">
 			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
