--- a/pages/projects.html
+++ b/pages/projects.html
@@ -24,22 +24,25 @@
 		<h2> My Projects</h2>
 
 			<ul id="project-list">
-				<a href="#project-1"><li>Project 1 </li></a>
+				<a href="#project-1"><li>Personal Page</li></a>
 				<a href="#project-2"><li>Project 2 </li></a>
 			</ul>
 
-			<h3 id="project-1"> Project 1 </h3>
+			<h3 id="project-1"> Personal Page </h3>
+			<h4> Intro </h4>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				The first project, or pseudo-project, that I have done at the Academy is this page. It is written using HTML and CSS, which I wrote from scratch. There are a few pages, each with different information. The CV page has information about my education, skills and past work. The personal statement page contains a statement about my goals and current position. This page, the projects page, shows the details of projects I have worked on. There is also a link to my github profile.
+			</p>
+			<p>
+				The main page has links to every other page on the site, as well as containing a mailto link to send me an email.  
 			</p>
 
-			<img src="../images/google.png"/>
-			<img src="../images/screenshot-cv.png"/>
+			<h4>Screenshots</h4>
+			<img src="../images/index-screenshot.png"/>
+
+			<p>
+				This is a screenshot just to give a feel of what the index page looks like, and the overall feel of the site. 
+			</p>
 
 			<a class="to-top" href="#body">Go to top of page. &#x2191</a>
 
