added tetris to projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,21 @@
 	<title>Projects</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script type="text/javascript" src="Tetris/Game.js"></script>
+  <script type="text/javascript" src="Tetris/Square.js"></script>
+  <script type="text/javascript" src="Tetris/Window.js"></script>
+  <script type="text/javascript" src="Tetris/Board.js"></script>
+  <script type="text/javascript" src="Tetris/Display.js"></script>
+  <script type="text/javascript" src="Tetris/Block.js"></script>
+  <script type="text/javascript" src="Tetris/arrayHelpers.js"></script>
+  <script type="text/javascript" src="Tetris/templates.js"></script>
+  <script type="text/javascript" src="Tetris/main.js"></script>
+
 </head>
 <body id="body">
 	<header>
@@ -46,15 +61,8 @@
 
 			<a class="to-top" href="#body">Go to top of page. &#x2191</a>
 
-			<h3 id="project-2"> Project 2 </h3>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
+			<h3 id="project-2"> Tetris </h3>
+			<div id='main-game'> </div>
 
 			<a class="to-top" href="#body"> Go to top of page. &#x2191 </a>
 
