added instructions to projects.html

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -64,6 +64,23 @@
 
 			<h3 id="project-2"> Tetris </h3>
 			<div id='main-game'> </div>
+			<section id="rules">
+			<h2> Instructions </h2>
+				<h3> Basics </h3>
+					<p> Blocks will fall from the top of the screen. </p>
+					<p> If they reach the top, the game ends </p>
+					<p> If you fill up every space in a row, that row disappears</p>
+				<h3> Controls </h3>
+					<p>
+						J: Move left <br>
+						L: Move right <br>
+						K: Flip <br>
+						Space: Go Fast <br>
+						W: Pause <br>
+						Q: Reset <br>
+					</p>
+
+		</section>
 
 			<a class="to-top" href="#body"> Go to top of page. &#x2191 </a>
 
