--- a/pages/personal-statement.html
+++ b/pages/personal-statement.html
@@ -21,7 +21,7 @@
 
 	<main id="page">
 		<p>
-			I am an aspiring DevOps/SDET Engineer with a passion for technology and a deep motivation to learn more. I am always looking for new ways to apply technology to business, and am constantly on the lookout for new solutions that can be beneficial. Whilst training at the Sparta Academy I've learned a lot and look forward to applying this new knowledge on-site. 
+			I am an SDET Engineer with a passion for technology and a deep motivation to learn more. I am always looking for new ways to apply technology to business, and am constantly on the lookout for new solutions that can be beneficial. Whilst training at the Sparta Academy I've learned a lot and look forward to applying this new knowledge on-site. 
 		</p>
 
 		<div id="contact">
