cleaned up CV page

--- a/pages/CV.html
+++ b/pages/CV.html
@@ -37,21 +37,21 @@
 					<li>C</li>
 					<li>etc.</li>
 				</ul>
-		<h2> Experience </h2>
-			<ul>
-				<li> 
-					<ul>
-						<li> Embedded item 1 </li>
-						<li> Embedded item 2 </li>
-					</ul> 
-				</li>
-				<li> Item 2 </li>
-				<li> Item 3 </li>
-				<li> Item 4 </li>
-			</ul>
+		
 		<h2> Education </h2>
 
-		<h2> Other </h2>
+		<h3> BEng Computing(unfinished) - Imperial College London</h3>
+		<h4> Projects </h4>
+
+		<p> Eye tracking window manager - Application that switches user’s active window based on where they are looking using webcam footage. Application worked on ubuntu distributions using any window manager by interacting directly with the X server. Written in C++, used openCV library. Managed team using Kanban.</p>
+
+		<p>Robotics - built functionality for a robot to navigate an environment. Used Lego mindstorms pieces. Involved implementing a PID Controller and Monte Carlo localization in Python.</p>
+
+		<p>OS - wrote functionality for a toy operating system. Included thread, memory and file management. Learned to solve complex, unseen problems without teaching. Written in C. </p>
+
+		<p>Compiler - wrote a compiler for a toy c-like language, which compiled to ARM assembly.  Two main parts - syntactic analysis and assembly generation. Written in Java.</p>
+
+		<p>Assembler - program to assemble ARM into raspberry pi processor instructions.  Written in C.</p>
 
 		<div id="contact">
 			<p> <a href="mailto:mrasmusen@spartaglobal.co"> Email: mrasmusen@spartaglobal.co </a></p>
